@@ -11,6 +11,9 @@ Version 5.2.6
 
 * Fix Debian bug #621047: monit fails to build after SSLv2 removal
 
+* Fix crash on Solaris which may occur if the system shows zero load.
+  Thanks to Paul Sun for report.
+
 
 
 Version 5.2.5
